--- a/style.css
+++ b/style.css
@@ -58,11 +58,10 @@ body {
      position: absolute;
      width: 100%;
      height: 100%;
-     display: flex;
+     display: block;
      justify-content: center;
      align-items: center;
      border-width: 1px;
-     
  }
 
  .card:hover {
@@ -115,6 +114,12 @@ body {
          flex-direction: column;
          align-items: center;
      }
+ }
+
+ img {
+     max-width: 100%;
+     max-height: 100%;
+     object-fit: contain;
  }
  
 
