--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 
 body {
     margin: 0;
-     background: radial-gradient(#F6DDCC, #FDEBD0)
+     background: #F6DDCC;
 }
 
 .page-title {
@@ -22,9 +22,11 @@ body {
 
 /* game-info-container represents the cards*/
 .game-info-container {
-    grid-column: 1 / -1;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 10px;
+    margin: 50px;
+    justify-content: center;
 }
 
 /*game info represents the Time and Flip*/
@@ -38,31 +40,26 @@ body {
     background-color:white;
     height: 175px;
     width: 125px;
+    position: relative;
     border-style: solid;
-    background-image: url(./assets/images/earth-icon.png); 
+    transform-style: unset !important;
+ }
+
+ .card .front {
+    background-image: url(./assets/images/earth-icon.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
  }
 
 /* game-container represents the cards, flip and time*/
-.game-container {
+#cards {
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-gap: 10px;
     margin: 50px;
     justify-content: center;
 }  
-
-.card-face {
-     position: absolute;
-     width: 100%;
-     height: 100%;
-     display: block;
-     justify-content: center;
-     align-items: center;
-     border-width: 1px;
- }
 
  .card:hover {
     cursor: url(assets/cursor/cursor-small.png), auto;
@@ -97,8 +94,6 @@ body {
     to {
         font-size: 10em;
         background-color: rgba(0, 0, 0, .8);
-
-
     }
 }
 
@@ -118,11 +113,39 @@ body {
 
  img {
      max-width: 100%;
-     max-height: 100%;
+     max-height: 120%;
      object-fit: contain;
  }
  
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #F6DDCC;
+    overflow: hidden;
+    padding-top: 190px;
+    padding-left: 170px;
+}
 
+.sidenav a {
+    padding: 7px 9px 7px 9px;
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+    display: block;
+    font-family: monospace;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+    cursor: url(assets/cursor/cursor-small.png), auto;
+  }
  
-
+  @media screen and (max-height: 600px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
  
